<resources>
    <string name="app_name">ToBuyList</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint_item">Enter Item</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_color">Color</string>
    <string name="hint_size">Size</string>
    <string name="save_button">Save</string>
    <string name="confirm_string">Are you sure?</string>
    <string name="no_string">No</string>
    <string name="yes_string">Yes</string>
    <string name="Update">\@string/update_text</string>
    <string name="update_text">Update</string>
</resources>
