<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:background="@android:color/background_light">

            <TextView
                android:id="@+id/title"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/name"
                android:layout_below="@id/title"
                android:hint="@string/hint_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/quantity"
                android:layout_below="@id/name"
                android:inputType="number"
                android:hint="@string/hint_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/color"
                android:layout_below="@id/quantity"
                android:hint="@string/hint_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/size"
                android:layout_below="@id/color"
                android:inputType="number"
                android:hint="@string/hint_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/save_button"
                android:text="@string/save_button"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/size"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>