<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/confirm_text"
                android:text="@string/confirm_string"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/confirm_no_button"
                android:text="@string/no_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="40dp" />

            <Button
                android:id="@+id/confirm_yes_button"
                android:text="@string/yes_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>